--- a/SLIC_Collab/hsi_upscale_libs.ipynb
+++ b/SLIC_Collab/hsi_upscale_libs.ipynb
@@ -158,12 +158,12 @@
    ],
    "source": [
     "end_band = -20\n",
-    "hsi_dset = noise.SavitzkyGolay().denoise_bands(hsi_dset[:, :, :end_band], 5, 3) \n",
-    "hsi_dset = np.array(hsi_dset)\n",
-    "index = np.where(hsi_dset < 0.1) #had it at 0.05 but shadows were forming in clustering\n",
-    "hsi_dset[index] = 0\n",
+    "hsi_dset_pro = noise.SavitzkyGolay().denoise_bands(hsi_dset[:, :, :end_band], 5, 3) \n",
+    "hsi_dset_pro = np.array(hsi_dset_pro)\n",
+    "index = np.where(hsi_dset_pro < 0.1) #had it at 0.05 but shadows were forming in clustering\n",
+    "hsi_dset_pro[index] = 0\n",
     "\n",
-    "signals = [np.ndarray.flatten(hsi_dset[ii,jj,:]) for ii in range(0, hsi_dset.shape[0]) for jj in range(0, hsi_dset.shape[1]) ]\n",
+    "signals = [np.ndarray.flatten(hsi_dset_pro[ii,jj,:]) for ii in range(0, x_size) for jj in range(0, y_size) ]\n",
     "\n",
     "for xy in tqdm(range(0, len(signals))):  \n",
     "    try:\n",
@@ -172,7 +172,7 @@
     "        norm = signals[xy]\n",
     "    signals[xy] = norm\n",
     "\n",
-    "hsi_dset = np.array(signals).reshape(x_size, y_size, (spectral_size_hsi + end_band))"
+    "hsi_dset_pro = np.array(signals).reshape(x_size, y_size, (spectral_size_hsi + end_band))"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "ax.axis(\"off\")\n",
     "\n",
     "ax = axs[1]\n",
-    "ax.imshow(hsi_dset[:, :, find_index(1400, hsi_wavelegths)],\n",
+    "ax.imshow(hsi_dset_pro[:, :, find_index(1400, hsi_wavelegths)],\n",
     "          cmap = 'inferno',\n",
     "          interpolation = 'nearest')\n",
     "ax.set_title(\"HSI\", fontsize = 18)\n",
@@ -231,7 +231,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "libs_dset_downsample = np.array(libs_dset[2::4, 2::4])\n",
+    "skip_pixel = 4\n",
+    "mid_point = skip_pixel//2\n",
+    "libs_dset_downsample = np.array(libs_dset[mid_point::skip_pixel, mid_point::skip_pixel])\n",
     "\n",
     "target_shape = hsi_dset.shape[:2]\n",
     "libs_dset_downsample = upscale_array(libs_dset_downsample, target_shape)"
@@ -293,7 +295,7 @@
     "compactness = 1 # Balance between color and space proximity. Optimize using Log scale\n",
     "max_num_iter = 20 # Iterations to perform on the kmeans algorithm\n",
     "\n",
-    "hsi_slic = slic(hsi_dset, n_segments = n_segments, max_num_iter = max_num_iter, sigma = sigma, compactness = compactness)"
+    "hsi_slic = slic(hsi_dset_pro, n_segments = n_segments, max_num_iter = max_num_iter, sigma = sigma, compactness = compactness)"
    ]
   },
   {
@@ -316,7 +318,7 @@
     "fig, axs = plt.subplots(1, 1, figsize = (4, 4))\n",
     "\n",
     "ax = axs\n",
-    "ax.imshow(mark_boundaries(hsi_dset[:, :, find_index(1400, hsi_wavelegths)]/np.max(hsi_dset[:, :, find_index(1400, hsi_wavelegths)]),\n",
+    "ax.imshow(mark_boundaries(hsi_dset_pro[:, :, find_index(1400, hsi_wavelegths)]/np.max(hsi_dset_pro[:, :, find_index(1400, hsi_wavelegths)]),\n",
     "                           hsi_slic, \n",
     "                           color = (1, 0, 0)))\n",
     "\n",
@@ -394,7 +396,7 @@
     "libs_flat = manual_features(libs_slic_upsample, lines, libs_wavelegths)\n",
     "libs_flat = libs_flat.reshape(libs_flat.shape[0], -1).T\n",
     "\n",
-    "hsi_flat = hsi_dset.reshape(-1, hsi_dset.shape[-1])"
+    "hsi_flat = hsi_dset_pro.reshape(-1, spectral_size_hsi)"
    ]
   },
   {
